@@ -21,10 +21,6 @@ import java.util.*;
 import java.util.function.Function;
 import java.util.stream.*;
 
-import org.apache.commons.collections4.IteratorUtils;
-
-import com.google.common.collect.Iterators;
-
 import db.DBRecord;
 import db.StringField;
 import ghidra.dbg.target.TargetObject;
@@ -60,8 +56,7 @@ import ghidra.trace.model.target.*;
 import ghidra.trace.model.target.annot.TraceObjectInterfaceUtils;
 import ghidra.trace.model.thread.TraceObjectThread;
 import ghidra.trace.util.TraceChangeRecord;
-import ghidra.util.LockHold;
-import ghidra.util.Msg;
+import ghidra.util.*;
 import ghidra.util.database.*;
 import ghidra.util.database.DBCachedObjectStoreFactory.AbstractDBFieldCodec;
 import ghidra.util.database.annot.*;
@@ -228,6 +223,8 @@ public class DBTraceObject extends DBAnnotatedObject implements TraceObject {
 		}
 		DBTraceObject parent = doCreateCanonicalParentObject();
 		InternalTraceObjectValue value = parent.setValue(lifespan, path.key(), this, resolution);
+		// TODO: Should I re-order the recursion, so values are inserted from root to this?
+		// TODO: Should child lifespans be allowed to exceed the parent's?
 		DBTraceObjectValPath path = parent.doInsert(lifespan, resolution);
 		return path.append(value);
 	}
@@ -510,12 +507,39 @@ public class DBTraceObject extends DBAnnotatedObject implements TraceObject {
 		}
 	}
 
+	protected Lifespan doAdjust(Lifespan span, String key, Object value) {
+		// Ordered by min, so I only need to consider the first conflict
+		// If start is contained in an entry, assume the user means to overwrite it.
+		for (InternalTraceObjectValue val : doGetValues(span, key)) {
+			if (Objects.equals(value, val.getValue())) {
+				continue; // not a conflict
+			}
+			if (val.getLifespan().contains(span.min())) {
+				continue; // user probably wants to overwrite the remainder of this entry
+			}
+			// Every entry intersects the span, so if we get one, adjust
+			return span.withMax(val.getMinSnap() - 1);
+		}
+		return span;
+	}
+
 	// TODO: Could/should this return Stream instead?
 	protected Collection<? extends InternalTraceObjectValue> doGetValues(Lifespan span,
 			String key) {
 		return doGetValues(span.lmin(), span.lmax(), key);
 	}
 
+	/**
+	 * The implementation of {@link #getValues(Lifespan, String)}
+	 * 
+	 * <p>
+	 * This collects entries ordered by min snap
+	 * 
+	 * @param lower the lower snap
+	 * @param upper the upper snap
+	 * @param key the key
+	 * @return the collection of values
+	 */
 	protected Collection<? extends InternalTraceObjectValue> doGetValues(long lower, long upper,
 			String key) {
 		// Collect triplet-indexed values
@@ -605,23 +629,20 @@ public class DBTraceObject extends DBAnnotatedObject implements TraceObject {
 		Rectangle2DDirection dir = forward
 				? Rectangle2DDirection.BOTTOMMOST
 				: Rectangle2DDirection.TOPMOST;
-		List<Iterator<DBTraceObjectAddressRangeValue>> iterators = manager.rangeValueMap
+		List<Stream<DBTraceObjectAddressRangeValue>> streams = manager.rangeValueMap
 				.getActiveMemorySpaces()
 				.stream()
-				.map(s -> IteratorUtils.filteredIterator(s
+				.map(s -> StreamSupport.stream(s
 						.reduce(TraceAddressSnapRangeQuery.intersecting(span, s.getAddressSpace())
 								.starting(dir))
 						.orderedValues()
-						.iterator(),
-					v -> key.equals(v.getEntryKey()) && this == v.getParent()))
-				.collect(Collectors.toList());
+						.spliterator(),
+					false).filter(v -> key.equals(v.getEntryKey()) && this == v.getParent()))
+				.toList();
 		Comparator<Long> order = forward ? Comparator.naturalOrder() : Comparator.reverseOrder();
 		Comparator<DBTraceObjectAddressRangeValue> comparator =
 			Comparator.comparing(v -> v.getMinSnap(), order);
-		Iterator<DBTraceObjectAddressRangeValue> merged =
-			Iterators.mergeSorted(iterators, comparator);
-		return StreamSupport
-				.stream(Spliterators.spliteratorUnknownSize(merged, Spliterator.ORDERED), false);
+		return StreamUtils.merge(streams, comparator);
 	}
 
 	@Override
@@ -642,10 +663,7 @@ public class DBTraceObject extends DBAnnotatedObject implements TraceObject {
 		Comparator<Long> order = forward ? Comparator.naturalOrder() : Comparator.reverseOrder();
 		Comparator<InternalTraceObjectValue> comparator =
 			Comparator.comparing(v -> v.getMinSnap(), order);
-		Iterator<InternalTraceObjectValue> merged =
-			Iterators.mergeSorted(Arrays.asList(nrVals.iterator(), rVals.iterator()), comparator);
-		return StreamSupport
-				.stream(Spliterators.spliteratorUnknownSize(merged, Spliterator.ORDERED), false);
+		return StreamUtils.merge(List.of(nrVals, rVals), comparator);
 	}
 
 	@Override
@@ -756,6 +774,9 @@ public class DBTraceObject extends DBAnnotatedObject implements TraceObject {
 			}
 			if (resolution == ConflictResolution.DENY) {
 				doCheckConflicts(lifespan, key, value);
+			}
+			else if (resolution == ConflictResolution.ADJUST) {
+				lifespan = doAdjust(lifespan, key, value);
 			}
 			var setter = new ValueLifespanSetter(lifespan, value) {
 				DBTraceObject canonicalLifeChanged = null;
